--- a/index.html
+++ b/index.html
@@ -32,6 +32,145 @@
             rel="stylesheet"
             href="css/responsive.css"
         />
+
+        <style>
+            /* .search-library {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                margin-bottom: var(--spacing-md);
+            }
+
+            .search-library-btn {
+                width: 32px;
+                height: 32px;
+                border-radius: var(--radius-full);
+                background-color: transparent;
+                color: var(--text-secondary);
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                transition: all var(--transition-fast);
+            }
+
+            .search-library-btn:hover {
+                background-color: var(--bg-active);
+                color: var(--text-primary);
+                transform: scale(1.04);
+            }
+
+            .sort-btn {
+                padding: var(--spacing-xs) var(--spacing-sm);
+                border-radius: var(--radius-sm);
+                background-color: transparent;
+                color: var(--text-secondary);
+                font-size: 14px;
+                font-weight: 400;
+                transition: all var(--transition-fast);
+                display: flex;
+                align-items: center;
+                gap: var(--spacing-sm);
+            }
+
+            .sort-btn:hover {
+                color: var(--text-primary);
+            } */
+            .search-wrapper {
+                display: flex;
+                align-items: center;
+                gap: 4px;
+
+                height: 32px;
+                padding: 0 8px;
+                border-radius: 8px;
+
+                transition: box-shadow 0.2s;
+                box-shadow: none;
+                background: var(--bg-active);
+                color: var(--text-secondary);
+
+                display: none;
+                opacity: 0;
+                width: 0;
+                transition: width 0.3s, opacity 0.25s;
+            }
+
+            /* Show when expanded */
+            .search-wrapper.expanded {
+                display: flex;
+                opacity: 1;
+                width: 100%;
+            }
+
+            /* Hide the main search button when expanded */
+            .search-library-btn.hide {
+                display: none;
+            }
+
+            .sort-btn.hide {
+                display: none;
+            }
+
+            .search-btn-icon {
+                display: flex;
+                align-items: center;
+                margin-left: 4px;
+
+                background: transparent;
+                color: var(--text-secondary);
+                font-size: 14px;
+            }
+
+            .search-library-input {
+                border: none;
+                outline: none;
+
+                width: 160px;
+                min-width: 0;
+                padding-left: 4px;
+
+                background: transparent;
+                color: var(--text-secondary);
+                font-size: 15px;
+
+                transition: width 0.25s, opacity 0.25s;
+                opacity: 0.88;
+            }
+
+            .search-library-input::placeholder {
+                color: var(--text-secondary);
+                opacity: 0.7;
+                font-size: 15px;
+            }
+
+            .no-results-wrapper {
+                flex: 1;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                min-height: 250px;
+                width: 100%;
+
+                text-align: center;
+                color: #b3b3b3;
+                font-family: inherit;
+            }
+
+            .no-results-title {
+                font-weight: 600;
+                font-size: 1.2rem;
+                color: #fff;
+                margin-bottom: 16px;
+            }
+
+            .no-results-desc {
+                font-size: 1rem;
+                letter-spacing: 0.2px;
+                line-height: 1.4;
+                color: #b3b3b3;
+            }
+        </style>
     </head>
 
     <body>
@@ -55,22 +194,39 @@
                     </div>
 
                     <div class="nav-tabs">
+                        <!-- <button class="close-filter-btn">
+                            <i class="fa-solid fa-xmark"></i>
+                        </button>
                         <button class="nav-tab active">Playlists</button>
-                        <button class="nav-tab">Artists</button>
+                        <button class="nav-tab">Artists</button> -->
                     </div>
 
                     <div class="search-library">
+                        <!-- Real search btn -->
                         <button class="search-library-btn">
                             <i class="fas fa-search"></i>
                         </button>
+
+                        <div class="search-wrapper">
+                            <span class="search-btn-icon">
+                                <i class="fas fa-search"></i>
+                            </span>
+                            <input
+                                type="text"
+                                class="search-library-input"
+                                placeholder="Search in Your Library"
+                            />
+                        </div>
+
                         <button class="sort-btn">
-                            Recents
-                            <i class="fas fa-list"></i>
+                            <span class="sort-text">Recent</span>
+                            <i class="sort-icon fas fa-list"></i>
                         </button>
                     </div>
 
+                    <!-- Library Content -->
                     <div class="library-content">
-                        <div class="library-item active">
+                        <!-- <div class="library-item active">
                             <div class="item-icon liked-songs">
                                 <i class="fas fa-heart"></i>
                             </div>
@@ -80,6 +236,18 @@
                                     <i class="fas fa-thumbtack"></i>
                                     Playlist • 3 songs
                                 </div>
+                            </div>
+                        </div>
+
+                        <div class="library-item">
+                            <img
+                                src="placeholder.svg?height=48&width=48"
+                                alt="24.03"
+                                class="item-image"
+                            />
+                            <div class="item-info">
+                                <div class="item-title">24.03</div>
+                                <div class="item-subtitle">Playlist • Han</div>
                             </div>
                         </div>
 
@@ -110,18 +278,6 @@
                         <div class="library-item">
                             <img
                                 src="placeholder.svg?height=48&width=48"
-                                alt="24.03"
-                                class="item-image"
-                            />
-                            <div class="item-info">
-                                <div class="item-title">24.03</div>
-                                <div class="item-subtitle">Playlist • Han</div>
-                            </div>
-                        </div>
-
-                        <div class="library-item">
-                            <img
-                                src="placeholder.svg?height=48&width=48"
                                 alt="Thùy Chi"
                                 class="item-image"
                             />
@@ -129,7 +285,7 @@
                                 <div class="item-title">Thùy Chi</div>
                                 <div class="item-subtitle">Artist</div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </nav>
             </aside>
@@ -192,7 +348,10 @@
                                 Today's biggest hits
                             </h2>
                         </div>
-                        <div class="hits-grid">
+                        <div
+                            class="hits-grid"
+                            id="hits-grid"
+                        >
                             <div class="hit-card">
                                 <div class="hit-card-cover">
                                     <img
